--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
 	<meta name="apple-mobile-web-app-title" content="Active Theory">
 	<meta name="apple-mobile-web-app-capable" content="yes">
 	<meta name="apple-mobile-web-app-status-bar-style" content="black">	
-	<link rel="apple-touch-icon" sizes="180x180" href="assets/meta/apple-touch-icon.png">
-	<link rel="icon" type="image/png" sizes="32x32" href="assets/meta/favicon-32x32.png">
-	<link rel="icon" type="image/png" sizes="16x16" href="assets/meta/favicon-16x16.png">
-	<link rel="manifest" href="assets/meta/manifest.json">
-	<link rel="mask-icon" href="assets/meta/safari-pinned-tab.svg" color="#333333">
+	<link rel="apple-touch-icon" sizes="180x180" href="https://activetheory.net/assets/meta/apple-touch-icon.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="https://activetheory.net/assets/meta/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="https://activetheory.net/assets/meta/favicon-16x16.png">
+	<link rel="manifest" href="https://activetheory.net/assets/meta/manifest.json">
+	<link rel="mask-icon" href="https://activetheory.net/assets/meta/safari-pinned-tab.svgg" color="#333333">
 	<meta name="msapplication-TileColor" content="#ffffff">
 	<meta name="theme-color" content="#000000">
 	<style type="text/css">@font-face{font-family:'ailerons';src:url('/assets/fonts/ailerons.woff2')format('woff2'),url('/assets/fonts/ailerons.woff')format('woff');font-style:normal;font-weight:300}@font-face{font-family:'SinkinSans-500Medium';src:url('/assets/fonts/SinkinSans-500Medium.woff2')format('woff2'),url('/assets/fonts/SinkinSans-500Medium.woff')format('woff');font-style:normal}@font-face{font-family:'SinkinSans-700Bold';src:url('/assets/fonts/SinkinSans-700Bold.woff2')format('woff2'),url('/assets/fonts/SinkinSans-700Bold.woff')format('woff');font-style:normal}body,html,#Stage{margin:0;padding:0;width:100%;height:100%;overflow:hidden}#Stage,#Stage *{position:absolute;-webkit-tap-highlight-color:rgba(0,0,0,0);-webkit-text-size-adjust:none}#Stage * input,#Stage * textarea{-moz-user-select:auto;-webkit-user-select:auto;-o-user-select:auto;-ms-user-select:auto;-webkit-tap-highlight-color:auto}#Stage br,#Stage span{position:relative}.link-fallback{opacity:0.7;transition:0.3s all}.link-fallback:hover{opacity:1}@keyframes repaint{0%{width:10000px;height:5px}100%{width:5px;height:10000px}}</style>
